<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.6"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_weight=".7"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_165sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:src="@drawable/ic_easy_patient_logo" />

        <TextView
            android:id="@+id/tv_label_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/login_str"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/opensans_semibold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:id="@+id/ll_terms_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:fontFamily="@font/opensans_regular"
                android:textSize="@dimen/_14ssp"
                android:text="@string/i_accept_the" />

            <TextView
                android:id="@+id/tv_terms_condition_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/terms_and_conditions"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/textColor"
            android:inputType="textPassword"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:background="@drawable/btn_design"
            android:text="@string/enter_str"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorText"
            android:fontFamily="@font/opensans_regular"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:id="@+id/tv_already_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:gravity="center_horizontal"
            android:text="@string/already_have_registration"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            android:fontFamily="@font/opensans_regular"
            android:textSize="@dimen/_12ssp"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_for_free"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/opensans_regular"/>
    </LinearLayout>
</LinearLayout>